--- a/frontend/public/style/_vars.scss
+++ b/frontend/public/style/_vars.scss
@@ -39,6 +39,7 @@ $color-primary: $color-pf-blue-300;
 // TODO (jon) review color usage throughout app and consolidate common colors into this file
 
 $color-alertmanager-dark: $color-pf-orange-500;
+$color-co-m-row-hover: #fafafa;
 $color-configmap-dark: $color-pf-purple-600;
 $color-container-dark: $color-pf-light-blue-400;
 $color-grey-background-border: #ccc;
